--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   rebloc: ^0.3.0+4
   dio: ^3.0.10
   pull_to_refresh: ^1.6.3
+  flutter_search_bar: ^2.1.0
 
 dev_dependencies:
   flutter_test:
